# rapido

./: .gitignore  COPYING  Cargo.toml  build.rs  rapido  runtime.vars  vm.sh  vm_autorun.env
cut/: fstests_btrfs.sh  simple_example.sh  simple_network.sh
selftest/test/: 002
src/: cpio.rs  lib.rs  main.rs
src/cpio/: Cargo.toml
src/cpio/src/: lib.rs
src/kv-conf/: Cargo.toml
src/kv-conf/src/: lib.rs
tools/: parse_depmod.awk
