[package]
name = "rapido"
description = "Quickly test Linux kernel changes"
authors = ["David Disseldorp"]
# GPL-2.0 covers rust source under the src directory, excluding third_party,
# as marked via SPDX-License-Identifier file headers.
license = "GPL-2.0"
version = "0.1.0"
edition = "2018"
default-run = "rapido-cut"

[lib]
name = "cpio"
path = "src/cpio.rs"

# non-lib source for binaries is carried under src/bin/

[dependencies]
# minimal command line parameter passing
crosvm = { path = "src/third_party/crosvm" }
# parse ELF to determine binary / library dependencies
elf = { default-features = false, path = "src/third_party/rust-elf" }
# please avoid adding any more dependencies
