[package]
name = "rapido"
description = "Quickly test Linux kernel changes"
authors = ["David Disseldorp"]
# GPL-2.0 covers rust source under the src directory, excluding third_party,
# as marked via SPDX-License-Identifier file headers.
license = "GPL-2.0"
version = "0.1.0"
edition = "2018"
default-run = "rapido-cut"

[lib]
name = "cpio"
path = "src/cpio.rs"

# non-lib source for binaries is carried under src/bin/

[dependencies]
# minimal command line parameter passing
crosvm = { path = "src/third_party/crosvm" }
# Parse ELF to determine library dependencies. "std" provides file seek API.
elf = { default-features = false, features = ["std"], path = "src/third_party/rust-elf" }
# please avoid adding any more dependencies
