[package]
name = "rapido"
description = "Quickly test Linux kernel changes"
authors = ["David Disseldorp"]
# The following license covers the src directory, excluding third_party.
# SPDX-License-Identifier headers are attached to individual source files.
license = "(GPL-2.0 OR GPL-3.0)"
version = "0.1.0"
edition = "2018"
default-run = "rapido-cut"

[lib]
name = "cpio"
path = "src/cpio.rs"

# non-lib source for binaries is carried under src/bin/

[dependencies]
# minimal command line parameter passing
crosvm = { path = "src/third_party/crosvm" }
# Parse ELF to determine library dependencies. "std" provides file seek API.
elf = { default-features = false, features = ["std"], path = "src/third_party/rust-elf" }
# please avoid adding any more dependencies
